<resources>
    <string name="app_name">Carro Rental</string>
    <string name="razor_pay_key" translatable="false">rzp_live_rqnYB5MlHMnGbp</string>
    <string name="razor_pay_key_test" translatable="false">rzp_test_DzhOHKz9K9wtLY</string>
    <string name="razor_pay_secret" translatable="false">cOYEuv652UMnewFJe9qTYw3J</string>
    <string name="razor_pay_secret_test" translatable="false">NBgkML3TNHS6kfGZi3HUjZqg</string>
    <string name="about_us_url" translatable="false">https://carrorental.in/mob-about.php</string>
    <string name="contact_us_url" translatable="false">https://carrorental.in/mob-contact.php</string>
    <string name="terms_and_condition_url" translatable="false">https://carrorental.in/mob-terms.php</string>
    <string name="privacy_policy_url" translatable="false">https://carrorental.in/mob-privacy.php</string>
    <string name="delete_account_url" translatable="false">https://carrorental.in/myadmin/account-delete</string>
    <string name="get_started">Get Started</string>
    <string name="sign_in">Sign In</string>
    <string name="your_ride_just_a_tap_away">Your ride, just a tap away.</string>
    <string name="get_started_by_verifying_your_phone_number">Get started by verifying your phone number.</string>
    <string name="enter_your_mobile_number">Enter your mobile number</string>
    <string name="edit_phone_number">Edit Phone number</string>
    <string name="send_otp">Send OTP</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="we_ve_sent_a_one_time_password_otp_to_your_mobile_number">We\'ve sent a One-Time Password (OTP) to your mobile number.</string>
    <string name="resend_otp_in_10s">Resend OTP in 10s</string>
    <string name="complete_your_profile">Complete Your Profile</string>
    <string name="don_t_worry_only_you_can_see_your_personal_data_no_other_else_will_able_to_see_it">Don’t worry, only you can see your personal data. No other else will able to see it.</string>
    <string name="name">Name</string>
    <string name="available_from">Available From</string>
    <string name="enter_your_name">Enter Your Name</string>
    <string name="gender">Gender</string>
    <string name="register">Register</string>
    <string name="skip_for_now">Skip For Now</string>
    <string name="enable_location_access">Enable Location Access</string>
    <string name="to_ensure_a_shameless_and_efficient_experience_allow_us_access_to_your_location">To ensure a shameless and efficient experience, allow us access to your location.</string>
    <string name="allow_location_access">Allow Location Access</string>
    <string name="maybe_later">Maybe Later</string>
    <string name="one_way">One Way</string>
    <string name="round_trip">Round Trip</string>
    <string name="out_station">Out Station</string>
    <string name="hourly">Hourly</string>
    <string name="city_ride">City Ride</string>
    <string name="flight">Flight</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="navigation_drawer_open">Open Navigation Drawer</string>
    <string name="navigation_drawer_close">Close Navigation Drawer</string>
    <string name="on_the_road_again_we_ve_got_the_wheels">On the Road Again? We’ve Got the Wheels !</string>
    <string name="plan_your_route_embark_on_a_journey">Plan Your Route, \nEmbark on a Journey</string>
    <string name="from">From</string>
    <string name="enter_pickup_location">Enter Pickup location</string>
    <string name="to">To</string>
    <string name="enter_your_destination">Enter your destination</string>
    <string name="date">Date</string>
    <string name="choose_your_date_of_journey">Choose your date of journey</string>
    <string name="choose_your_time_of_journey">Choose your time of journey</string>
    <string name="pickup_time">Pickup Time</string>
    <string name="explore_cabs">Explore cabs</string>
    <string name="find_a_route_let_s_make_a_journey">Find a route,\nLet’s make a Journey</string>
    <string name="return_date">Return Date</string>
    <string name="choose_your_return_date">Choose your return date</string>
    <string name="choose_return_date">Choose return date</string>
    <string name="book_a_cab">Book a cab</string>
    <string name="your_adress">Your Address</string>
    <string name="search_your_location">Search Your Location</string>
    <string name="pick_up">Pick up</string>
    <string name="enter_your_pickup_location">Enter your pickup location</string>
    <string name="drop_location">Drop Location</string>
    <string name="enter_your_drop_location">Enter your drop location</string>
    <string name="pick_up_at">Pick up at</string>
    <string name="book_your_flight_begin_your_journey">Book Your Flight,\nBegin Your Journey</string>
    <string name="drop_address">Drop Address</string>
    <string name="airport">Airport</string>
    <string name="start_typing_airport_city_name">Start typing airport / city name</string>
    <string name="dabolim_airport">Dabolim Airport</string>
    <string name="set_location_on_map">Set Location On Map</string>
    <string name="home">Home</string>
    <string name="shop">Shop</string>
    <string name="office">Office</string>
    <string name="done">Done</string>
    <string name="_00_00_0000_00_00_am">00-00-0000 | 00:00 AM</string>
    <string name="driver">Driver</string>
    <string name="contact_pickup_details"><![CDATA[Contact & Pickup Details]]></string>
    <string name="enter_your_email">Enter Your Email</string>
    <string name="proceed">Proceed</string>
    <string name="select_vehicle">Select Vehicle</string>
    <string name="your_booking_details">Your Booking Details</string>
    <string name="total_fare">Total Fare</string>
    <string name="final_amount">Final Amount</string>
    <string name="trip_type">Trip Type</string>
    <string name="pickup_date_time"><![CDATA[Pickup Date & Time]]></string>
    <string name="drop_date">Drop Date</string>
    <string name="car_type">Car Type</string>
    <string name="pay_2200_now_rest_during_the_trip"><![CDATA[Pay ₹2200 now & rest during the trip.]]></string>
    <string name="pay_full_amount_2200_now">Pay full amount ₹ 2200 now</string>
    <string name="got_a_promo_code">Got a promo code ?</string>
    <string name="enter_coupon_code">Enter Coupon Code</string>
    <string name="apply">Apply</string>
    <string name="payment_details">Payment Details</string>
    <string name="subscription_payment_details">Subscription Payment Details</string>
    <string name="book_now">Book Now</string>
    <string name="booking_confirmation">Booking Confirmation</string>
    <string name="cancel_trip">Cancel trip</string>
    <string name="cancelation_reason">Cancelation Reason</string>
    <string name="change_of_plans">Change of Plans</string>
    <string name="alternative_transportation">Alternative Transportation</string>
    <string name="health_issues">Health Issues</string>
    <string name="error_in_booking">Error in Booking</string>
    <string name="wrong_destination">Wrong Destination</string>
    <string name="others">Others</string>
    <string name="enter_reason">Enter Reason</string>
    <string name="i_agree_to_the">I agree to the</string>
    <string name="terms_condition"><![CDATA[Terms & Condition]]></string>
    <string name="accept_terms_condition"><![CDATA[Accept Terms & Condition]]></string>
    <string name="and">and</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="cancel_booking">Cancel Booking</string>
    <string name="your_booking_has_been_successfully_cancelled">Your Booking has been successfully cancelled</string>
    <string name="book_again">Book Again</string>
    <string name="packages">Packages</string>
    <string name="my_bookings">My Bookings</string>
    <string name="your_departure_on">Your departure on :</string>
    <string name="pickup_location">Pickup location :</string>
    <string name="pickup_locationn">Pickup location</string>
    <string name="cancel">Cancel</string>
    <string name="edit">Edit</string>
    <string name="track">Track</string>
    <string name="phone_number">Phone Number</string>
    <string name="edit_booking_details">Edit Booking Details</string>
    <string name="email">Email</string>
    <string name="update_details">Update Details</string>
    <string name="logout">Logout</string>
    <string name="are_you_sure_you_want_to_exit">Are you sure you want to exit ?</string>
    <string name="are_you_sure_you_want_to_logout">Are you sure you want to logout ?</string>
    <string name="you_will_be_redirected_to_login_screen">You will be redirected to Login screen.</string>
    <string name="yes_exit">Yes Exit</string>
    <string name="yes_logout">Yes Logout</string>
    <string name="booking_confirm_successfully">Booking Confirmed SuccessFully</string>
    <string name="inclusions">Inclusions</string>
    <string name="exclusions">Exclusions</string>
    <string name="t_c"><![CDATA[T&C]]></string>
    <string name="_24_x_7_helpline">24 x 7 Helpline</string>
    <string name="get_trip_update_in_whatsapp">Get Trip Update in Whatsapp</string>
    <string name="other_details">You will receive the reservation details on your email address and mobile soon. You will receive your driver details within 1 hour of your pickup time. We kindly ask for your cooperation in avoiding enquiries about the driver details before that time.</string>
    <string name="call_now">Call Now</string>
    <string name="didn_t_get_it_on_the_first_time">Didn’t Get it on the first time?</string>
    <string name="resend_in_00_29">Resend in 00:29</string>
    <string name="notifications">Notifications</string>
    <string name="no_notifications">No Notifications</string>
    <string name="we_ll_let_you_know_when_there_will_be_something_to_update_you">We’ll let you know when there will be something to update you.</string>
    <string name="search_location">Search Location</string>
    <string name="resend_otp">Resend Otp</string>
    <string name="no_car_available">No Car Available</string>
    <string name="pickup_date">Pickup Date</string>
    <string name="return_time">Return Time</string>
    <string name="choose_your_return_time">Choose Your Return Time</string>
    <string name="choose_return_time">Choose Return Time</string>
    <string name="go_to_home">Go To Home</string>
    <string name="no_booking_available">No Booking Available</string>
    <string name="title">Title</string>
    <string name="google_maps_key">AIzaSyBgiv49mgm6XjZjSVjJesafwhZMHQsj-DM</string>
    <string name="_4_hrs_40kms">4 hrs | 40Kms</string>
    <string name="_8_hrs_80kms">8 hrs | 80Kms</string>
    <string name="_10_hrs_100kms">10 hrs | 100Kms</string>
    <string name="_12_hrs_120kms">12 hrs | 120Kms</string>
    <string name="your_journey_starts_here_flight_booking">Your Journey Starts \nHere : Flight Booking</string>
    <string name="self_driving">Self Driving</string>
    <string name="offers">Offers</string>
    <string name="book_your_car_drive_the_road_own_the_moment">Book Your Car \nDrive the road, own the moment</string>
    <string name="select_branch">Select Branch</string>
    <string name="travel_date">Travel Date</string>
    <string name="choose_your_travel_date">Choose Travel date</string>
    <string name="travel_time">Travel Time</string>
    <string name="rate_us">Rate Us</string>
    <string name="contact_us">Contact Us</string>
    <string name="about_us">About Us</string>
    <string name="terms_conditions"><![CDATA[Terms & Conditions]]></string>
    <string name="branch">Branch</string>
    <string name="opps">Opps</string>
    <string name="sorry_pickup_time_is_not_available_between_12_am_to_4_am_please_choose_a_different_time">Sorry! Pickup Time is not available between 12 AM to 4 AM. Please choose a different time.</string>
    <string name="close">Close</string>
    <string name="profile">Profile</string>
</resources>