<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/white"
    android:layout_height="wrap_content">

    <ImageView
        android:layout_width="@dimen/_30sdp"
        android:layout_height="@dimen/_30sdp"
        android:layout_gravity="center"
        android:layout_marginVertical="@dimen/_10sdp"
        android:src="@drawable/ic_wrong"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/opps"
        android:layout_marginVertical="@dimen/_5sdp"
        android:textColor="@color/black"
        android:textSize="@dimen/_15ssp"
        android:textStyle="bold"
        android:gravity="center"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sorry_pickup_time_is_not_available_between_12_am_to_4_am_please_choose_a_different_time"
        android:textColor="@color/black"
        android:textSize="@dimen/_10ssp"
        android:layout_marginVertical="@dimen/_5sdp"
        android:paddingHorizontal="@dimen/_10sdp"
        android:gravity="center"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/close"
        android:backgroundTint="@color/red2"
        android:textStyle="bold"
        android:layout_marginVertical="@dimen/_20sdp"
        android:textColor="@color/white"
        android:textSize="@dimen/_12ssp"
        app:cornerRadius="@dimen/_10sdp"
        android:layout_gravity="center"/>


</LinearLayout>