<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="@dimen/_10sdp"
    android:backgroundTint="@color/primary_field"
    android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/iv_cut"
            android:layout_width="@dimen/_15sdp"
            android:layout_height="@dimen/_15sdp"
            android:src="@drawable/ic_x"
            android:layout_gravity="end"
            app:tint="@color/primary"
            android:layout_marginEnd="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_5sdp"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/icon_logout"
            android:layout_gravity="center"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/are_you_sure_you_want_to_logout"
            android:textSize="@dimen/_15ssp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:gravity="center"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/you_will_be_redirected_to_login_screen"
            android:textSize="@dimen/_12ssp"
            android:layout_marginTop="@dimen/_5sdp"
            android:textColor="@color/black"
            android:gravity="center"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_logout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/yes_logout"
            android:textSize="@dimen/_14ssp"
            android:textAllCaps="false"
            android:paddingVertical="@dimen/_10sdp"
            app:cornerRadius="@dimen/_8sdp"
            app:backgroundTint="@color/red3"
            android:layout_marginHorizontal="@dimen/_40sdp"
            android:layout_marginTop="@dimen/_15sdp"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:gravity="center"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_cancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:textSize="@dimen/_13ssp"
            android:textAllCaps="false"
            android:layout_marginHorizontal="@dimen/_40sdp"
            android:background="@drawable/otp_inactive_box"
            android:layout_marginTop="@dimen/_15sdp"
            android:layout_marginBottom="@dimen/_20sdp"
            android:textColor="@color/gray"
            android:textStyle="bold"
            android:gravity="center"/>



    </LinearLayout>

</androidx.cardview.widget.CardView>